--- a/styles/style.css
+++ b/styles/style.css
@@ -53,7 +53,7 @@ a {
 }
 .main-title {
     padding: 0 20px 0 20px;
-    font-family: 'EB Garamond', 'serif';
+    font-family: 'EB Garamond', serif;
     font-size: 72px;
     color: #fff;
     font-weight: 400;
